add all theoretical to ass 2

--- a/Computer_assignment_2/ass2.Rmd
+++ b/Computer_assignment_2/ass2.Rmd
@@ -22,18 +22,62 @@ library(reshape2)
 ```
 \newpage
 \section{Exercise 1}
-\textbf{1:}
-An Archimedean copula is a copula on the form: $C(u_1,..., u_n) =       \varphi(\sum^n_{i=1}\varphi^{-1}(u_i))$, where $\varphi$ is the copula's generator function. The conditions for this generator function is that \begin{itemize}
+\subsection{}
+    An Archimedean copula is a copula on the form: \\ $C(u_1,..., u_n) =       \varphi^{-1}(\sum^n_{i=1}\varphi(u_i))$, where $\varphi$ is the copula's generator function. The conditions for this generator function is that \begin{itemize}
         \item $\varphi(0) = 1,$ $\varphi(\infty) = 0$
         \item $\varphi$ is decreasing
         \item $\varphi$ is continuous
-\end{itemize} 
-A convenient way of obtaining such generator functions is to take the Laplace transform of a random variable, $\varphi_X(t) = \int_0^{\infty}\mathrm{e}^{-tx}f_X(x)dx$. Depending on choice of generator function we retrieve different families of Archimedean copulas, such as Clayton, Gumbel or Frank copulas.
+    \end{itemize} 
+    A convenient way of obtaining such generator functions is to take the Laplace transform of a random variable, $\varphi_X(t) = \int_0^{\infty}\mathrm{e}^{-tx}f_X(x)dx$. Depending on choice of generator function we retrieve different families of Archimedean copulas, such as Clayton, Gumbel or Frank copulas.
+\subsection{}
+    \begin{itemize}
+        \item Frank copula: This copulas has generator function $\varphi(t) = \mathrm{ln}\left(\frac{\mathrm{e}^{-\theta t}-1}{\mathrm{e}^{-\theta}-1}\right)$, C(u,v) = $\varphi^{-1}(\varphi(u) + \varphi(v)) = \frac{1}{\theta}\mathrm{ln}\left(1+\frac{(\mathrm{e}^{-\theta u}-1)(\mathrm{e}^{-\theta v}-1)}{\mathrm{e}^{-\theta}-1}\right)$
+    
+        \item Clayton copula: The generator is $\varphi(t) = t^{-\theta}-1$, which results in a copula $C(u,v) = (u^{-\theta}+v^{-\theta}-1)^{-1/\theta}$
+        \item Gumbel copula: has generator $\varphi(t)=(-\mathrm{log}(t))^{\theta}$ which generates a copula: $C(u,v) = \mathrm{exp}\left(-\left((-\mathrm{log}(u))^{\theta} + (-\mathrm{log}(v))^{\theta}\right) \right)$
+        \item The Ali-Mikhail-Haq copula has a generator $\varphi (t) = \mathrm{log}\left(\frac{1-\theta(1-t)}{t}\right)$ which yields a copula $C(u,v) = \frac{uv}{1-\theta(1-u)(1-v)}$.
+    \end{itemize}
+    
+\subsection{} 
+The laplace transform of a random variable with distribution function $F(x)$ and density $f(x)$ is defined as (in the continuous case):
 
-\textbf{2:}
-Frank copula: This copulas has generator function $\varphi(t) = \mathrm{ln}\left(\frac{\mathrm{e}^{-\theta t}-1}{\mathrm{e}^{-\theta}-1}\right)$, C(u,v) = $\varphi^{-1}(\varphi(u) + \varphi(v)) = \frac{1}{\theta}\mathrm{ln}\left(1+\frac{(\mathrm{e}^{-\theta u}-1)(\mathrm{e}^{-\theta v}-1)}{\mathrm{e}^{-\theta}-1}\right)$
+\begin{equation}
+    \int_0^\infty\mathrm{e}^{-tx}\mathrm{d}F(x)  = \int_0^\infty\mathrm{e}^{-tx}f(x)\mathrm{d}x 
+\end{equation}
+For a Gamma-distributed variable this becomes:
+\begin{equation}
+    \int_0^\infty\mathrm{e}^{-tx}\mathrm{e}^{-bx}\frac{b^a}{\Gamma(a)}x^{a-1}\mathrm{d}x 
+\end{equation}
+With the gamma function being defined as $\Gamma(a) = \int_0^{\infty}x^{a-1}\mathrm{e}^{-x}\mathrm{d}x$ we will have some issues with it unless we can get rid of it somehow. We try to squeeze it into the expression by:
+\begin{equation}
+    \int_0^\infty\mathrm{e}^{-x(t+b)}\frac{b^a}{\Gamma(a)}x^{a-1}\mathrm{d}x = \frac{b^a}{\Gamma(a)(t+b)^a}\int_0^\infty\mathrm{e}^{-(t+b)x}((t+b)x)^{a-1}(t+b)\mathrm{d}x 
+\end{equation}
+With a subsitution $y = (t+b)x$ we have $\mathrm{d}y = (t+b)\mathrm{d}x$ which yields
+\begin{equation}
+    \frac{b^a}{\Gamma(a)(t+b)^a}\int_0^\infty\mathrm{e}^{-y}y^{a-1}\mathrm{d}y = \frac{b^a}{\Gamma(a)(t+b)^a}\Gamma(a) = \frac{b^a}{(t+b)^a}
+\end{equation}
+With $b = 1, a = 1/\theta$ this becomes $(t+1)^{-1/\theta}$. The inverse, $t^{-\theta}-1$ is a generator for the class of copulas, $C(u,v) = \left(\mathrm{max}\left[u^{-\theta}+v^{-\theta} -1, 0\right]\right)^{-1/\theta}$.
 
-Clayton copula: The generator is $\varphi(t) = t^{-\theta}-1$, which results in a copula $C(u,v) = (u^{-\theta}+v^{-\theta}-1)^{-1/\theta}$
+\subsection{}
+With \textbf{X} being a random $d$-dimensional random vector, we say that it follows a multivariate normal distribution if it has a probability density function:
+\begin{equation}
+    f(\mathbf{x};\boldsymbol\mu, \boldsymbol\sigma)=(2\pi)^{-k/2}\det (\boldsymbol\Sigma)^{-1/2} \, \exp \left( -\frac{1}{2} (\mathbf{x} - \boldsymbol\mu)^\mathrm{T} \boldsymbol\Sigma^{-1}(\mathbf{x} - \boldsymbol\mu) \right)
+\end{equation}
+Where $\boldsymbol\Sigma$ is a covariance matrix describing the variance of the $d$ elements in $\mathbf{X}$ and the covariance between them. $\boldsymbol \mu$ is a vector of their respective means. Furthermore, if it is a multivariate t-distribution it follows
+\begin{equation}
+    f(\mathbf{x}; \boldsymbol\mu, \tilde{\boldsymbol\Sigma}, \nu) = 
+    \frac{\Gamma\left[(\nu+p)/2\right]}{\Gamma(\nu/2)\nu^{p/2}\pi^{p/2}\left|{\tilde{\boldsymbol\Sigma}}\right|^{1/2}}\left[1+\frac{1}{\nu}({\mathbf x}-{\boldsymbol\mu})^T{\tilde{\boldsymbol\Sigma}}^{-1}({\mathbf x}-{\boldsymbol\mu})\right]^{-(\nu+p)/2}
+\end{equation}
+In this density, $\nu$ is the number of degrees of freedom, $\boldsymbol\mu$ the mean of the elements and $\tilde{\boldsymbol{\Sigma}}$ a scaled covariance matrix $\tilde{\boldsymbol{\Sigma}}=\boldsymbol\Sigma\nu/(\nu-2)$ for $\nu > 2$.
+
+\subsection{}
+There are several ways to measure dependence. Some of these are Pearson's $\rho$, Kendall's $\tau$ and Spearman's $\rho_S$.
+\begin{itemize}
+    \item Pearson's $\rho$ is the linear relationship between two variables. It is calculated as the covariance between two variables scaled by their respective standard deviation. It cannot capture nonlinear dependence and is sensitive to outliers.
+    \item Kendall's $\tau$ is a measure that assesses the probability of concordance minus the probability of discordance between two observations in a sample. A concordant pair of observation $(x_1,y_1), (x_2, y_2)$ means that $x_1 > x_2 \rightarrow y_1 > y_2$. A concordant pair means the opposite. This is a more ordinal way of measuring dependence than correlation since it only counts if the ordinal relationship between two samples hold and not how much. This makes it more robust. 
+    \item Spearman's $\rho_S$ is the correlation (that is Pearson's $\rho$) but instead calculated on the rank of the variables in each observation in a sample. In a sample $\{(x_i, y_i)\}$ the rank of each $x_i$ and $y_i$ is calculated, namely one assigns the number associated with the place they would have if all $x$  
+\end{itemize}
+
 \section{Exercise 2}
 
 \subsection{Exercise 2.1}
